modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -276,7 +276,22 @@ compress_html:
   ignore:
     envs: development
 
+# Collections
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+  recipes:
+    output: true
+    permalink: /:collection/:path/
+  pets:
+    output: true
+    permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
 
+    
 # Defaults
 defaults:
   # _posts
