改了navigation.yml的一个地址

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "navigation_1"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: https://yesterz.github.io/about/
   - title: "Sample Posts"
     url: /year-archive/
   - title: "Sample Collections"
