--- a/_config.yml
+++ b/_config.yml
@@ -278,9 +278,6 @@ compress_html:
 
 # Collections
 collections:
-  docs:
-    output: true
-    permalink: /:collection/:path/
   recipes:
     output: true
     permalink: /:collection/:path/
@@ -299,11 +296,9 @@ defaults:
       path: ""
       type: posts
     values:
-      show_date: true
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
       share: true
       related: true
   # _pages
@@ -313,3 +308,27 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _recipes
+  - scope:
+      path: ""
+      type: recipes
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _pets
+  - scope:
+      path: ""
+      type: pets
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
